<?xml version="1.0"?>
<package format="2">
  <name>toland_flight</name>
  <version>1.0.0</version>
  <description>The toland_flight package that checks if a UAV is flat on the ground.</description>

  <!-- MAINTAINERS -->
  <maintainer email="martin.scheiber@aau.at">Martin Scheiber</maintainer>

  <!-- LICENSE -->
  <license>BSD-2-Clause</license>

  <!-- URL -->
  <!-- <url type="website">http://wiki.ros.org/toland_flight</url> -->

  <!-- AUTHORS -->
  <author email="martin.scheiber@aau.at">Martin Scheiber</author>

  <!-- DEPENDENCIES -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
